@@ -79,11 +79,11 @@ view_utils_draw_events (GtkWidget *widget, GdkWindow *window, GdkGC *gc, GdkRect
 		str = ico->summary;
 
 		if (flags & VIEW_UTILS_DRAW_END) {
-			strftime (buf, 512, "%R%p-", &tm_start);
+			strftime (buf, 512, "%X-", &tm_start);
 			len = strlen (buf);
-			strftime (buf + len, 512 - len, "%R%p    ", &tm_end);
+			strftime (buf + len, 512 - len, "%X    ", &tm_end);
 		} else
-			strftime (buf, 512, "%R%p    ", &tm_start);
+			strftime (buf, 512, "%X    ", &tm_start);
 
 		gdk_draw_string (window,
 				 widget->style->font,
