@@ -1,3 +1,8 @@
+1998-04-03  Federico Mena Quintero  <federico@nuclecu.unam.mx>
+
+	* view-utils.c (view_utils_draw_events): The "better" format
+	string for strftime() wasn't better, after all :-(
+
 1998-04-02  Federico Mena Quintero  <federico@nuclecu.unam.mx>
 
 	* gncal-full-day.c: New full-day widget.  It is still a work in
